--- a/.scaffolder/plugin-feature/feature.php.hbs
+++ b/.scaffolder/plugin-feature/feature.php.hbs
@@ -2,10 +2,10 @@
 /**
  * {{ wpClassName inputs.featureName }} class file
  *
- * @package Create_WordPress_Plugin
+ * @package wp-swagger-generator
  */
 
-namespace Alley\WP\Create_WordPress_Plugin\\{{ wpNamespace inputs.featureName prefix="Features" }};
+namespace Alley\WP\Swagger_Generator\\{{ wpNamespace inputs.featureName prefix="Features" }};
 
 use Alley\WP\Types\Feature;
 
